# NostrGD

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  GDNostr.csproj  GDNostr.sln  README.md  README_EN.md  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
addons/nostr_godot/: NostrGDClient.Auth.cs  NostrGDClient.Auth.cs.uid  NostrGDClient.Messaging.cs  NostrGDClient.Messaging.cs.uid  NostrGDClient.NWC.cs  NostrGDClient.NWC.cs.uid  NostrGDClient.cs  NostrGDClient.cs.uid  NostrGDPlugin.cs  NostrGDPlugin.cs.uid  icon.png.import  nostr_crypto_web_bridge.gd  nostr_gd_client.gd  nostr_gd_plugin.gd  plugin.cfg  secp256k1.gd
addons/nostr_godot/gdextension/: CMakeLists.txt  build.sh  nostr_crypto.gdextension
addons/nostr_godot/gdextension/src/: nostr_crypto.cpp
docs/: index.512x512.png.import  index.apple-touch-icon.png.import  index.html  index.manifest.json  index.service.worker.js  libnostr_crypto.web.template_release.wasm32.wasm
fonts/: NotoSansJP.ttf.import  NotoSansSymbols2.ttf.import  composite_font.tres
reference/: sdk_reference.md
scripts/: nostr_utils.gd  nostr_utils.gd.uid
web/: index.144x144.png.import  index.180x180.png.import  index.html  index.icon.png.import  index.manifest.json  index.png.import
